--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Sprite_Animation.sln"
+    "dotnet.defaultSolution": "Knights_Quest.sln"
 }
